2018-xx-xx v0.0002 pjacklam

 * Increment version number.

2017-01-11 v0.0001 pjacklam

 * Initial release.